# gravity_simulator

./: CMakeLists.txt  README.md  body.hpp  body_container.hpp  configuration.hpp  configurations.hpp  gui_manager.hpp  main.cpp  orbit_drawer.hpp  physics_engine.hpp  renderer.hpp  vector.hpp  vector.test.cpp
docs/: main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc
include/: body.hpp  configuration.hpp  configurations.hpp  constants.hpp  gui_manager.hpp  main.cpp  orbit_drawer.hpp  physics_engine.hpp  renderer.hpp  simulation_state.hpp  vector.hpp
include/src/: gui_manager.hpp  orbit_drawer.hpp  renderer.hpp  reset.hpp  simulation_state.hpp  vector.hpp
src/: body.cpp  body.hpp  configuration.cpp  configuration.hpp  configurations.cpp  configurations.hpp  gui_manager.cpp  gui_manager.hpp  main.cpp  orbit_drawer.cpp  orbit_drawer.hpp  physics_engine.cpp  physics_engine.hpp  renderer.cpp  renderer.hpp  simulation_state.cpp  vector.cpp  vector.hpp
test/: body.test.cpp  configuration.test.cpp  configurations.test.cpp  main_bug.cpp  physics_engine.test.cpp  renderer.test.cpp  simulation_state.test.cpp  vector.test.cpp
